nbproject/private/Default-build.log
/home/sukantdev/opt/cross/bin/i386-elf-as Modules/crti.S -o Modules/crti.o
/home/sukantdev/opt/cross/bin/i386-elf-as Modules/crtn.S -o Modules/crtn.o
/home/sukantdev/opt/cross/bin/i386-elf-as Modules/crt0.S -o Modules/crt0.o
Welcome to the build infrastructure!
/usr/bin/make IA32_INITOR -C ./Initializer
make[1]: Entering directory '/home/sukantdev/circuit-source-2.03/Initializer'
/home/sukantdev/opt/cross/bin/i386-elf-ld ./Compile/IA32/Startup.o ./Compile/IA32/LoadKernel.o ./Compile/Generic/Elf/BinaryAnalyzer.o ./Compile/Generic/EarlyConsole.o ./Compile/Generic/EarlyMultiboot.o ./Compile/Generic/Elf/KernelModule.o ./Compile/Generic/Elf/Relocator.o -o Build/Initor -T InitorBuild_IA32.ld
cp Build/Initor ../Modules/Builtin/
make[1]: Leaving directory '/home/sukantdev/circuit-source-2.03/Initializer'
/usr/bin/make BuildChain -C ./KernelHost
make[1]: Entering directory '/home/sukantdev/circuit-source-2.03/KernelHost'
/home/sukantdev/opt/cross/bin/i386-elf-g++ -I"." -I"../Interface" -I"../Interface/Arch" -c -fvisibility=default -ffreestanding -nostdlib -nostdinc -Wall -O2 -fPIC -fno-rtti -fno-exceptions -fno-strict-aliasing Source/Arch/IA32/Boot/Main.cpp -o Compile/Arch/IA32/Main.o
In file included from ../Interface/Heap.hpp:33:0,
                 from ../Interface/Object.hpp:31,
                 from ../Interface/KERNEL.h:25,
                 from ../Interface/Memory/Internal/BuddyAllocator.hpp:23,
                 from ../Interface/Memory/KFrameManager.h:23,
                 from ../Interface/Memory/KObjectManager.h:22,
                 from ../Interface/Module/Elf/ABI/__cxa_atexit.h:25,
                 from ../Interface/Module/Elf/ABI/__cxa_finalize.h:23,
                 from ../Interface/Module/Elf/ABI/Implementor.h:24,
                 from Source/Arch/IA32/Boot/Main.cpp:25:
../Interface/Utils/Memory.h:11:1: error: template with C linkage
 template<class SwapClient>
 ^~~~~~~~
In file included from ../Interface/Module/Elf/ABI/__cxa_finalize.h:23:0,
                 from ../Interface/Module/Elf/ABI/Implementor.h:24,
                 from Source/Arch/IA32/Boot/Main.cpp:25:
../Interface/Module/Elf/ABI/__cxa_atexit.h: In function 'int __cxa_atexit(void (*)(void*), void*, void*)':
../Interface/Module/Elf/ABI/__cxa_atexit.h:66:14: warning: ISO C++ forbids incrementing a pointer of type 'void*' [-Wpointer-arith]
  ++(dsoHandle);
              ^
Source/Arch/IA32/Boot/Main.cpp: In function 'void ImmatureHang(const char*)':
Source/Arch/IA32/Boot/Main.cpp:68:6: error: conflicting declaration of 'void ImmatureHang(const char*)' with 'C' linkage
 void ImmatureHang(const char *dbgString){
      ^~~~~~~~~~~~
In file included from ../Interface/Debugging.h:24:0,
                 from ../Interface/KERNEL.h:24,
                 from ../Interface/Memory/Internal/BuddyAllocator.hpp:23,
                 from ../Interface/Memory/KFrameManager.h:23,
                 from ../Interface/Memory/KObjectManager.h:22,
                 from ../Interface/Module/Elf/ABI/__cxa_atexit.h:25,
                 from ../Interface/Module/Elf/ABI/__cxa_finalize.h:23,
                 from ../Interface/Module/Elf/ABI/Implementor.h:24,
                 from Source/Arch/IA32/Boot/Main.cpp:25:
../Interface/Types.h:158:13: note: previous declaration with 'C++' linkage
 extern void ImmatureHang(const char*);
             ^~~~~~~~~~~~
Source/Arch/IA32/Boot/Main.cpp: At global scope:
Source/Arch/IA32/Boot/Main.cpp:272:1: error: expected '}' at end of input
 }
 ^
Makefile:90: recipe for target 'Compile/Arch/IA32/Main.o' failed
make[1]: *** [Compile/Arch/IA32/Main.o] Error 1
make[1]: Leaving directory '/home/sukantdev/circuit-source-2.03/KernelHost'
Makefile:125: recipe for target 'Build' failed
make: *** [Build] Error 2
